--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>NB CPN</title>
 </head>
 <body>
-    <h1>Hi NBcompany no1</h1>
+    <a href="pagess/index.html"><img src="img/NB_company.png" width="100%" height="100%" ></a>
 </body>
 </html>
